# lectures

./: README.md  _config.yml  pyproject.toml
src/T00 - Python Installation/: mac.md  windows.md
src/T01_basic_python_part_1/solutions/: S06_classes.ipynb
src/T02_basic_python_part_2/exercises/: S08_pandas.ipynb  S09_matplotlib.ipynb
src/T02_basic_python_part_2/solutions/: S08_pandas.ipynb  S09_matplotlib.ipynb
src/T03_data_processing_pandas/exercises/: C5_apply.ipynb  C6_merge.ipynb  C7_pivot_melt.ipynb  C7_pivot_melt_table.ipynb
src/T03_data_processing_pandas/solutions/: C5_apply.ipynb  C6_merge.ipynb  C7_pivot_melt.ipynb  C7_pivot_melt_table.ipynb
src/T05_data_visualization/: C01_pandas.ipynb  C02_seaborn.ipynb
src/T05_data_visualization/temp/: C0 - Data Gen.ipynb
src/T06_looker_studio/: C02_visualization_prototype.ipynb
src/T06_statistics/temp/: intro_statistics.ipynb
src/T07_statistics/: python_stats.ipynb
src/T99_project/: instruction.md
